--- a/dodong/web/BookStoreTemplate.xhtml
+++ b/dodong/web/BookStoreTemplate.xhtml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-사이트의 전체적인 템플릿
+서점 사이트의 공통적인 템플릿
+written by 은정
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
+    
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet library="css" name="stylesheet.css"/>
