--- a/dodong/web/BookStoreTemplate.xhtml
+++ b/dodong/web/BookStoreTemplate.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 서점 사이트의 공통적인 템플릿
-written by 은정
+@author 은정
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
