--- a/dodong/web/index.xhtml
+++ b/dodong/web/index.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="content">
 
         <h:form>
-            
+            <h:commandButton value="#{bundle.Join}" type="submit" action="MemberRegister"/>
         </h:form>
     </ui:define>
 </ui:composition>
