--- a/dodong/web/BookStoreTemplate.xhtml
+++ b/dodong/web/BookStoreTemplate.xhtml
@@ -20,7 +20,7 @@
            <ui:insert name="top" />
         </div>
 
-        <div id="content" class="center_content" >
+        <div id="content" align="center" class="center_content" >
         <ui:insert name="content" />
         </div>
     </h:body>
