--- a/dodong/web/bookregister.xhtml
+++ b/dodong/web/bookregister.xhtml
@@ -1,12 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>도서등록</title>
-    </h:head>
-    <h:body>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="./BookStoreTemplate.xhtml">
+    
+    <ui:define name="top"></ui:define> 
+    <ui:define name="content">
         <f:view>
             <h:form>
                 <h:outputLabel value="도서명"/><h:inputText value="#{bookRegisterView.book.title}"/>
@@ -19,6 +20,5 @@
             </h:form>
         </f:view>
 
-    </h:body>
-</html>
-
+    </ui:define>
+</ui:composition>
