--- a/dodong2/web/index.xhtml
+++ b/dodong2/web/index.xhtml
@@ -88,10 +88,10 @@
                 </div>
             
             <!-- 도서등록 화면으로 이동 -경원-->
-            <h:commandButton id="gotoregister" 
-                           action="bookregister" 
+            <h:commandButton id="gotoadmin" 
+                           action="adminpage" 
                            immediate="true"
-                           value="#{bundle.addBook}">
+                           value="Adminpage">
             </h:commandButton>
         </h:form>        
     </ui:define>
